--- a/index.html
+++ b/index.html
@@ -1,68 +1,120 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chris Figgins - Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    </head>
-    <body>
-        <section class="header">
-            <div class="name">
-                <h1>
-                    Chris Figgins
-                </h1>
-            </div>
-            <div class="links">
+
+<head>
+    <title>Chris Figgins - About Me</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+</head>
+
+<body>
+    <section id="header">
+        <div id="name">
+            <h1>
+                Chris Figgins
+            </h1>
+        </div>
+        <div id="links">
+            <p>
+                <a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a>
+            </p>
+        </div>
+    </section>
+    <section id="main">
+        <div id="primary">
+            <div id="primary-content">
                 <p>
-                    About | Portfolio | Contact
+                    <h1>About Me</h1>
                 </p>
-            </div>
-        </section>
-        <section class="main">
-            <div class="primary">
-                <div class="primary-content">
-                    <p>
-                        <h1>About Me</h1>
-                    </p>
-                    <hr>
-                    <div class="myphoto">
-                        <div class="description" contenteditable="true">
-                        <img src="assets/images/cats-q-c-640-480-1.jpg" />
-                            <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <p>
-                                Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus, sed varius nisi.
-                            </p>
-                            <p>  
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus. Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium mollis. Nullam faucibus justo sed lobortis egestas.
-                            </p>
-                            <p>
-                                Proin at dolor at quam viverra porta. Sed molestie consectetur augue id ornare. Sed laoreet quam a odio vehicula, a vulputate nulla condimentum. Praesent massa eros, gravida nec velit ac, tristique commodo augue. In hac habitasse platea dictumst. Nullam vel massa lorem. Maecenas non risus eu ex feugiat sodales. Aenean rutrum scelerisque mauris ac aliquet. Donec id tristique lorem. Donec in rhoncus erat. Vestibulum diam metus, interdum non elementum fermentum, semper eu lectus. Cras ultrices nisl eget fermentum ultrices. Sed libero urna, elementum sed lectus nec, dignissim tristique erat.
-                            </p>
-                            <p>
-                                Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus, sed varius nisi.
-                            </p>
-                            <p>  
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus. Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium mollis. Nullam faucibus justo sed lobortis egestas.
-                            </p>
-                            <p>
-                                Proin at dolor at quam viverra porta. Sed molestie consectetur augue id ornare. Sed laoreet quam a odio vehicula, a vulputate nulla condimentum. Praesent massa eros, gravida nec velit ac, tristique commodo augue. In hac habitasse platea dictumst. Nullam vel massa lorem. Maecenas non risus eu ex feugiat sodales. Aenean rutrum scelerisque mauris ac aliquet. Donec id tristique lorem. Donec in rhoncus erat. Vestibulum diam metus, interdum non elementum fermentum, semper eu lectus. Cras ultrices nisl eget fermentum ultrices. Sed libero urna, elementum sed lectus nec, dignissim tristique erat.
-                            </p>
-                            <p>
-                                Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus, sed varius nisi.
-                            </p>
-                            <p>  
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus. Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium mollis. Nullam faucibus justo sed lobortis egestas.
-                            </p>
-                        </div>
+                <hr>
+                <div id="myphoto">
+                    <div id="description">
+                        <img src="assets/images/generic-person.png" />
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                            laborum.
+                        </p>
+                        <p>
+                            Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet
+                            congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra
+                            eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et
+                            malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer
+                            fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus,
+                            sed varius nisi.
+                        </p>
+                        <p>
+                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                            egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper
+                            leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus.
+                            Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium
+                            mollis. Nullam faucibus justo sed lobortis egestas.
+                        </p>
+                        <p>
+                            Proin at dolor at quam viverra porta. Sed molestie consectetur augue id ornare. Sed laoreet
+                            quam a odio vehicula, a vulputate nulla condimentum. Praesent massa eros, gravida nec velit
+                            ac, tristique commodo augue. In hac habitasse platea dictumst. Nullam vel massa lorem.
+                            Maecenas non risus eu ex feugiat sodales. Aenean rutrum scelerisque mauris ac aliquet.
+                            Donec id tristique lorem. Donec in rhoncus erat. Vestibulum diam metus, interdum non
+                            elementum fermentum, semper eu lectus. Cras ultrices nisl eget fermentum ultrices. Sed
+                            libero urna, elementum sed lectus nec, dignissim tristique erat.
+                        </p>
+                        <p>
+                            Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet
+                            congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra
+                            eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et
+                            malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer
+                            fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus,
+                            sed varius nisi.
+                        </p>
+                        <p>
+                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                            egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper
+                            leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus.
+                            Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium
+                            mollis. Nullam faucibus justo sed lobortis egestas.
+                        </p>
+                        <p>
+                            Proin at dolor at quam viverra porta. Sed molestie consectetur augue id ornare. Sed laoreet
+                            quam a odio vehicula, a vulputate nulla condimentum. Praesent massa eros, gravida nec velit
+                            ac, tristique commodo augue. In hac habitasse platea dictumst. Nullam vel massa lorem.
+                            Maecenas non risus eu ex feugiat sodales. Aenean rutrum scelerisque mauris ac aliquet.
+                            Donec id tristique lorem. Donec in rhoncus erat. Vestibulum diam metus, interdum non
+                            elementum fermentum, semper eu lectus. Cras ultrices nisl eget fermentum ultrices. Sed
+                            libero urna, elementum sed lectus nec, dignissim tristique erat.
+                        </p>
+                        <p>
+                            Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet
+                            congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra
+                            eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et
+                            malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer
+                            fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus,
+                            sed varius nisi.
+                        </p>
+                        <p>
+                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                            egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper
+                            leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus.
+                            Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium
+                            mollis. Nullam faucibus justo sed lobortis egestas.
+                        </p>
+                        <p>
+                            <script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/chris-figgins-2a59b69"
+                                data-format="inline" data-related="false"></script>
+                        </p>
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="footer">
-            <p>
-                Copyright&nbsp;&copy;
-            </p>
-        </section>
-    </body>
+        </div>
+    </section>
+    <section id="footer">
+        <p>
+            Copyright&nbsp;&copy;
+        </p>
+    </section>
+</body>
+
 </html>
