--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         </div>
         <div id="links">
             <p>
-                <a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a>
+                <a href="home.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a>
             </p>
         </div>
     </section>
