Updated the home.html page with real content related to me, slight tweek to CSS to reflect a list as well

--- a/home.html
+++ b/home.html
@@ -31,75 +31,21 @@
                     <div id="description">
                         <img src="assets/images/generic-person.png" />
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                            laborum.
+                            Continue to adapt, learn, <strong>never settle</strong> for what you already know - there's
+                            plenty of opportunities out there to continue to build and enhance your skillsets. In this
+                            case, I'm taking this course to learn nodeJS and build upon a foundation that hasn't been
+                            touched since college with frontend development. Even some of the more basic functionality
+                            has been upgraded heavily since my initial deep dive (HTML5 & CSS3 Primarily). Seeing how
+                            far these technologies have advanced, primarily with ease of use, is fascinating.
                         </p>
                         <p>
-                            Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet
-                            congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra
-                            eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et
-                            malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer
-                            fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus,
-                            sed varius nisi.
-                        </p>
-                        <p>
-                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                            egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper
-                            leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus.
-                            Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium
-                            mollis. Nullam faucibus justo sed lobortis egestas.
-                        </p>
-                        <p>
-                            Proin at dolor at quam viverra porta. Sed molestie consectetur augue id ornare. Sed laoreet
-                            quam a odio vehicula, a vulputate nulla condimentum. Praesent massa eros, gravida nec velit
-                            ac, tristique commodo augue. In hac habitasse platea dictumst. Nullam vel massa lorem.
-                            Maecenas non risus eu ex feugiat sodales. Aenean rutrum scelerisque mauris ac aliquet.
-                            Donec id tristique lorem. Donec in rhoncus erat. Vestibulum diam metus, interdum non
-                            elementum fermentum, semper eu lectus. Cras ultrices nisl eget fermentum ultrices. Sed
-                            libero urna, elementum sed lectus nec, dignissim tristique erat.
-                        </p>
-                        <p>
-                            Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet
-                            congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra
-                            eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et
-                            malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer
-                            fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus,
-                            sed varius nisi.
-                        </p>
-                        <p>
-                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                            egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper
-                            leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus.
-                            Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium
-                            mollis. Nullam faucibus justo sed lobortis egestas.
-                        </p>
-                        <p>
-                            Proin at dolor at quam viverra porta. Sed molestie consectetur augue id ornare. Sed laoreet
-                            quam a odio vehicula, a vulputate nulla condimentum. Praesent massa eros, gravida nec velit
-                            ac, tristique commodo augue. In hac habitasse platea dictumst. Nullam vel massa lorem.
-                            Maecenas non risus eu ex feugiat sodales. Aenean rutrum scelerisque mauris ac aliquet.
-                            Donec id tristique lorem. Donec in rhoncus erat. Vestibulum diam metus, interdum non
-                            elementum fermentum, semper eu lectus. Cras ultrices nisl eget fermentum ultrices. Sed
-                            libero urna, elementum sed lectus nec, dignissim tristique erat.
-                        </p>
-                        <p>
-                            Phasellus cursus lobortis arcu ac bibendum. Pellentesque convallis dui consectetur laoreet
-                            congue. Ut eu odio non nunc cursus condimentum. Sed tincidunt bibendum justo, pharetra
-                            eleifend metus euismod vitae. Pellentesque habitant morbi tristique senectus et netus et
-                            malesuada fames ac turpis egestas. Nullam at sem eget lorem interdum elementum. Integer
-                            fringilla nibh vel risus laoreet porta. Donec nec metus nibh. Quisque eu eleifend tellus,
-                            sed varius nisi.
-                        </p>
-                        <p>
-                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                            egestas. Ut lobortis iaculis nibh, ultricies eleifend augue iaculis non. Vestibulum semper
-                            leo felis, et eleifend leo lobortis sed. Maecenas rutrum sodales quam semper faucibus.
-                            Suspendisse volutpat sit amet lacus et lobortis. Duis placerat mauris quis est pretium
-                            mollis. Nullam faucibus justo sed lobortis egestas.
+                            I'm building that on top of a strong foundation in:
+                            <ul>
+                                <li>Backend Service Development</li>
+                                <li>Infrastructure as Code</li>
+                                <li>Strategic Runtimes & Pipelines</li>
+                                <li>Cloud Architecture</li>
+                            </ul>
                         </p>
                         <p>
                             <script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/chris-figgins-2a59b69"
