Comments are wonderful, therefore you should add them. Done

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 
+<!-- 
+    Tried to keep the html as clean as possible, and use CSS for nearly every modifier of the base element 
+    (style, color, height, width, etc...). This was broken up into three sections: Header, Main and Footer 
+    across the pages
+-->
+
 <head>
     <title>Chris Figgins - Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -8,6 +14,8 @@
 </head>
 
 <body>
+
+    <!-- Header Section -->
     <section id="header">
         <div id="name">
             <h1>
@@ -20,6 +28,8 @@
             </p>
         </div>
     </section>
+
+    <!-- Main Section -->
     <section id="main">
         <div id="primary">
             <div id="primary-content">
@@ -52,6 +62,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer Section -->
     <section id="footer">
         <p>
             Copyright&nbsp;&copy;
