--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 
+<!-- 
+    Tried to keep the html as clean as possible, and use CSS for nearly every modifier of the base element 
+    (style, color, height, width, etc...). This was broken up into three sections: Header, Main and Footer 
+    across the pages
+-->
+
 <head>
     <title>Chris Figgins - Contact Me</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
+
+    <!-- Header Section -->
     <section id="header">
         <div id="name">
             <h1>
@@ -19,6 +27,8 @@
             </p>
         </div>
     </section>
+
+    <!-- Main Section -->
     <section id="main">
         <div id="primary">
             <div id="primary-content">
@@ -40,6 +50,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer Section -->
     <section id="footer">
         <p>
             Copyright&nbsp;&copy;
