A few syntax changes based off feedback from class

--- a/home.html
+++ b/home.html
@@ -38,8 +38,8 @@
                 </p>
                 <hr>
                 <div id="myphoto">
-                    <div id="description">
-                        <img src="assets/images/generic-person.png" />
+                    <div class="description">
+                        <img src="assets/images/generic-person.png" alt="Look at me!" />
                         <p>
                             Continue to adapt, learn, <strong>never settle</strong> for what you already know - there's
                             plenty of opportunities out there to continue to build and enhance your skillsets. In this
