--- a/portfolio.html
+++ b/portfolio.html
@@ -39,23 +39,23 @@
                 <hr>
                 <div class="portfolio">
                     <div class="portfolio-item">
-                        <img src="assets/images/cats-q-c-640-480-1.jpg" width="300" height="225" />
+                        <img src="assets/images/cats-q-c-640-480-1.jpg" width="300" height="225" alt="Hey it's a cat!" />
                         <p>Hangman</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="assets/images/cats-q-c-640-480-3.jpg" width="300" height="225" />
+                        <img src="assets/images/cats-q-c-640-480-3.jpg" width="300" height="225" alt="Sweet, cat 3" />
                         <p>RPG Game</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="assets/images/cats-q-c-640-480-4.jpg" width="300" height="225" />
+                        <img src="assets/images/cats-q-c-640-480-4.jpg" width="300" height="225" alt="Awesome - cat loves you" />
                         <p>Trivia Game</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="assets/images/cats-q-c-640-480-5.jpg" width="300" height="225" />
+                        <img src="assets/images/cats-q-c-640-480-5.jpg" width="300" height="225" alt="Why so serious?" />
                         <p>Rutgers Info Widget</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="assets/images/cats-q-c-640-480-9.jpg" width="300" height="225" />
+                        <img src="assets/images/cats-q-c-640-480-9.jpg" width="300" height="225" alt="I'm out of catch phrases" />
                         <p>Rock Paper Scissors</p>
                     </div>
                 </div>
